<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="15dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="13sp"
            android:background="@drawable/background"
            android:textColor="@color/black"
            android:text="@string/reset"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="60dp"

            />
        <TextView
            android:id="@+id/text_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/title_calculate_imc"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_reset"
            android:layout_marginBottom="40dp"

            />

        <TextView
            android:id="@+id/text_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/weight_kg"
            android:layout_below="@id/text_calculate"
            />

        <EditText
            android:id="@+id/edit_kg"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_below="@+id/text_kg"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/text_cm"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:text="@string/height_cm"
            android:layout_below="@id/edit_kg"
            />

        <EditText
            android:id="@+id/edit_cm"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_below="@+id/text_cm"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edit_cm"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:text="@string/calculate"
            android:textSize="22sp"
            android:background="@drawable/background"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/result_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/light_green"
            android:text="@string/result_calc"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_calculate"
            />
        <TextView
            android:id="@+id/type_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/light_green"
            tools:text="@string/category_imc"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_calculate"
            />
    </RelativeLayout>

</ScrollView>
